[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Dialogs/SplashDialog.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/Pixelorama Logo.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/Become a patron.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/Become a patron_Hover.png" type="Texture" id=4]
[ext_resource path="res://Assets/Graphics/Splash Art.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/Roboto-Bold.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/Fonts/Roboto-Small.tres" type="DynamicFont" id=7]

[node name="SplashDialog" type="WindowDialog"]
margin_right = 600.0
margin_bottom = 400.0
rect_min_size = Vector2( 600, 560 )
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Contents" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 6.0
margin_bottom = -12.0

[node name="HBoxContainer" type="HBoxContainer" parent="Contents"]
margin_right = 600.0
margin_bottom = 40.0
custom_constants/separation = -25

[node name="PatronsLabel" type="Label" parent="Contents/HBoxContainer"]
margin_top = 26.0
margin_right = 175.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 8
text = "Patrons:"
align = 1

[node name="PixeloramaLogo" type="TextureRect" parent="Contents/HBoxContainer"]
margin_left = 150.0
margin_right = 450.0
margin_bottom = 40.0
size_flags_horizontal = 3
texture = ExtResource( 2 )

[node name="ChangesLabel" type="Label" parent="Contents/HBoxContainer"]
margin_left = 425.0
margin_top = 26.0
margin_right = 600.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 8
text = "v0.6 Changes"
align = 1

[node name="HSeparator" type="HSeparator" parent="Contents"]
margin_top = 44.0
margin_right = 600.0
margin_bottom = 48.0

[node name="PatronsArtNews" type="HBoxContainer" parent="Contents"]
margin_top = 52.0
margin_right = 600.0
margin_bottom = 336.0
custom_constants/separation = 12

[node name="SpacerControl" type="Control" parent="Contents/PatronsArtNews"]
margin_right = 4.0
margin_bottom = 284.0
rect_min_size = Vector2( 4, 0 )

[node name="PatronsContainer" type="VBoxContainer" parent="Contents/PatronsArtNews"]
margin_left = 16.0
margin_right = 158.0
margin_bottom = 284.0
size_flags_horizontal = 3

[node name="PatronsScroll" type="ScrollContainer" parent="Contents/PatronsArtNews/PatronsContainer"]
margin_right = 142.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/PatronsArtNews/PatronsContainer/PatronsScroll"]
margin_right = 142.0
margin_bottom = 84.0
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="Contents/PatronsArtNews/PatronsContainer/PatronsScroll/VBoxContainer"]
margin_right = 142.0
margin_bottom = 84.0
size_flags_horizontal = 3

[node name="PatronButton" type="TextureButton" parent="Contents/PatronsArtNews/PatronsContainer/PatronsScroll/VBoxContainer/CenterContainer"]
margin_left = 29.0
margin_right = 113.0
margin_bottom = 84.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="ArtContainer" type="VBoxContainer" parent="Contents/PatronsArtNews"]
margin_left = 170.0
margin_right = 430.0
margin_bottom = 284.0
size_flags_horizontal = 3

[node name="SplashArt" type="TextureButton" parent="Contents/PatronsArtNews/ArtContainer"]
margin_right = 260.0
margin_bottom = 260.0
rect_min_size = Vector2( 260, 260 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
texture_normal = ExtResource( 5 )
expand = true

[node name="ArtCredits" type="Button" parent="Contents/PatronsArtNews/ArtContainer"]
margin_top = 264.0
margin_right = 260.0
margin_bottom = 284.0
mouse_default_cursor_shape = 2
text = "Art by Erevoid"
flat = true

[node name="ChangelogContainer" type="VBoxContainer" parent="Contents/PatronsArtNews"]
margin_left = 442.0
margin_right = 584.0
margin_bottom = 284.0
size_flags_horizontal = 3

[node name="ChangelogScroll" type="ScrollContainer" parent="Contents/PatronsArtNews/ChangelogContainer"]
margin_right = 142.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 260 )

[node name="Label" type="Label" parent="Contents/PatronsArtNews/ChangelogContainer/ChangelogScroll"]
margin_right = 142.0
margin_bottom = 2921.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Added

- Image layer rotation! Choose between 2 rotation algorithms, Rotxel and Nearest Neighbour - Thanks to azagaya!
- Crowdin integration for contributing translations!
- Spanish translation - thanks to azagaya & Lilly And!
- Chinese Simplified translation - thanks to Chenxu Wang!
- Latvian translation - thanks to Agnis Aldiņš (NeZvers)!
- Translators can now be seen in the About window.
- It is now possible to remove custom brushes with the middle mouse button.
- Added HSV mode to the color picker. (Added automatically because of the Godot 3.2 update)
- Lanczos scaling interpolation. (Added because of the Godot 3.2 update)
- You can now drag and drop (or right click and open with) image and .pxo files in Pixelorama.
- You can now hide the animation timeline - Thanks to YeldhamDev!

Changed

- Major changes to alpha blending behavior. The alpha values now get added/blended together instead of just replacing the pixel with the new value.
- Replaced some OS alerts with a custom made error dialog.
- Made the zooming smoother, is toggleable in Preferences whether to keep the new zooming or the old one.
- The camera now zooms at the mouse's position.
- Made the \"X\" button on the custom brushes a little smaller.
- The color picker will now have a small white triangle on the top left of the color preview if at least one of its RGB values are above 1 in Raw mode. (Added automatically because of the Godot 3.2 update)
- You can now toggle the visibility of hidden items on and off in the file dialogs. (Added automatically because of the Godot 3.2 update)
- The language buttons in the preferences have their localized names in their hint tooltips. For example, if you hover over the \"English\" button while the language is Greek, the hint tooltip will be \"Αγγλικά\", which is the Greek word for English.
- Translation updates.
- The presets in the ColorPickers are now hidden - Thanks to YeldhamDev!
- When opening a project (.pxo file), the save path is being set to the opened project's path - Thanks to YeldhamDev!

Fixed

- Delay the splash screen popup so it shows properly centered - Thanks to YeldhamDev!
- Possibly fixed crashes with motion drawing and undo/redoing.
- Fixed bug (which also caused crashes sometimes) when generating an outline inside the image and it was going outside the canvas' borders.
- Fixed crash when importing images that were failing to load. They still fail to load, but Pixelorama does not crash.
- Possibly fixed a rare crash where the cursor image was failing to load. It is now being loaded only once.
- Fixed ruler markings cutting off before they should - Thanks to YeldhamDev!
- Fixed bug where resizing the image on export was not working on Godot 3.2 - Issue #161"
autowrap = true

[node name="SpacerControl2" type="Control" parent="Contents/PatronsArtNews"]
margin_left = 596.0
margin_right = 600.0
margin_bottom = 284.0
rect_min_size = Vector2( 4, 0 )

[node name="HSeparator3" type="HSeparator" parent="Contents"]
margin_top = 340.0
margin_right = 600.0
margin_bottom = 344.0

[node name="Sponsors" type="HBoxContainer" parent="Contents"]
margin_top = 348.0
margin_right = 600.0
margin_bottom = 500.0
size_flags_vertical = 3

[node name="PlatinumContainer" type="VBoxContainer" parent="Contents/Sponsors"]
margin_right = 240.0
margin_bottom = 152.0
rect_min_size = Vector2( 240, 0 )
size_flags_horizontal = 5

[node name="Label" type="Label" parent="Contents/Sponsors/PlatinumContainer"]
margin_right = 240.0
margin_bottom = 14.0
text = "Platinum Sponsor"
align = 1

[node name="PlaceholderLabel" type="Label" parent="Contents/Sponsors/PlatinumContainer"]
margin_top = 65.0
margin_right = 240.0
margin_bottom = 80.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.678431, 0.611765, 0.807843, 1 )
text = "Platinum Sponsor Placeholder"
align = 1

[node name="TakeThisSpot" type="Button" parent="Contents/Sponsors/PlatinumContainer"]
margin_top = 132.0
margin_right = 240.0
margin_bottom = 152.0
mouse_default_cursor_shape = 2
text = "Take this spot!"
flat = true

[node name="VSeparator" type="VSeparator" parent="Contents/Sponsors"]
margin_left = 244.0
margin_right = 248.0
margin_bottom = 152.0

[node name="GoldContainer" type="VBoxContainer" parent="Contents/Sponsors"]
margin_left = 252.0
margin_right = 600.0
margin_bottom = 152.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Contents/Sponsors/GoldContainer"]
margin_right = 348.0
margin_bottom = 14.0
text = "Gold Sponsors"
align = 1

[node name="PlaceholderLabel" type="Label" parent="Contents/Sponsors/GoldContainer"]
margin_top = 65.0
margin_right = 348.0
margin_bottom = 80.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.678431, 0.611765, 0.807843, 1 )
text = "Gold Sponsors Placeholder"
align = 1

[node name="TakeThisSpot" type="Button" parent="Contents/Sponsors/GoldContainer"]
margin_top = 132.0
margin_right = 348.0
margin_bottom = 152.0
mouse_default_cursor_shape = 2
text = "Take this spot!"
flat = true

[node name="HSeparator2" type="HSeparator" parent="Contents"]
margin_top = 504.0
margin_right = 600.0
margin_bottom = 508.0

[node name="BottomHboxContainer" type="HBoxContainer" parent="Contents"]
margin_top = 512.0
margin_right = 600.0
margin_bottom = 542.0

[node name="ShowOnStartup" type="CheckBox" parent="Contents/BottomHboxContainer"]
margin_right = 188.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Don't show again"

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/BottomHboxContainer"]
margin_left = 192.0
margin_right = 407.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="DevelopedBy" type="Label" parent="Contents/BottomHboxContainer/VBoxContainer"]
margin_right = 215.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 7 )
text = "Pixelorama v0.6 - Developed by Orama Interactive"
align = 1

[node name="Copyright" type="Label" parent="Contents/BottomHboxContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 215.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 7 )
text = "Copyright 2019-2020 Orama Interactive"
align = 1

[node name="SpacerControl" type="Control" parent="Contents/BottomHboxContainer"]
margin_left = 411.0
margin_right = 600.0
margin_bottom = 30.0
size_flags_horizontal = 3
[connection signal="about_to_show" from="." to="." method="_on_SplashDialog_about_to_show"]
[connection signal="pressed" from="Contents/PatronsArtNews/PatronsContainer/PatronsScroll/VBoxContainer/CenterContainer/PatronButton" to="." method="_on_PatronButton_pressed"]
[connection signal="pressed" from="Contents/PatronsArtNews/ArtContainer/SplashArt" to="." method="_on_ArtCredits_pressed"]
[connection signal="pressed" from="Contents/PatronsArtNews/ArtContainer/ArtCredits" to="." method="_on_ArtCredits_pressed"]
[connection signal="pressed" from="Contents/Sponsors/PlatinumContainer/TakeThisSpot" to="." method="_on_TakeThisSpot_pressed"]
[connection signal="pressed" from="Contents/Sponsors/GoldContainer/TakeThisSpot" to="." method="_on_TakeThisSpot_pressed"]
[connection signal="toggled" from="Contents/BottomHboxContainer/ShowOnStartup" to="." method="_on_ShowOnStartup_toggled"]
